@@ -1,0 +1,9 @@
+Title: Fixed wrong NagVis links in "custom links" snapin
+Level: 1
+Component: multisite
+Class: fix
+State: unknown
+Version: 1.2.4p4
+Date: 1402901516
+
+
